getting the anime results from the api

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<li *ngFor="let anime of animeList">
+    <p>{{anime.title}}</p>
+    <img src={{anime.image_url}}>
+    <p>Score: {{anime.score}}</p>
+</li>
