--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,10 @@
-<p>header works!</p>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <form class="navbar-form navbar-left" role="search">
+        <div class="form-group">
+          <input type="text" class="form-control" #queryParam placeholder="Search for an anime">
+        </div>
+        <button type="button" class="btn btn-primary" (click)="updateQuery(queryParam.value)">Search</button>
+      </form>
+  </div>
+</nav>
