making the list a better appealing to the eye

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
-<li *ngFor="let anime of animeList">
+<div class="col-xs-6" *ngFor="let anime of animeList">
     <p>{{anime.title}}</p>
     <img src={{anime.image_url}}>
     <p>Score: {{anime.score}}</p>
-</li>
+</div>
