--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,6 @@
-<div class="col-xs-6" *ngFor="let anime of animeList">
+<!-- <div class="col-xs-6" *ngFor="let anime of animeList">
     <p>{{anime.title}}</p>
     <img src={{anime.image_url}}>
     <p>Score: {{anime.score}}</p>
-</div>
+</div> -->
+<app-anime-item *ngFor="let anime of animeList" [anime]="anime"></app-anime-item>
