creating the router and making it work

--- a/src/app/home/anime-item/anime-item.component.html
+++ b/src/app/home/anime-item/anime-item.component.html
@@ -2,5 +2,5 @@
     <p>{{anime.title}}</p>
     <img src={{anime.image_url}}>
     <p>Score: {{anime.score}}</p>
-    <button type="button" class="btn btn-success">View details</button>
+    <button type="button" class="btn btn-success" routerLink="/anime-detail">View details</button>
 </div>
