passing the selected Anime to the service
Had to pre define variables in the component wich subscribes to the method, I wasn`t able to pass the whole object and then in the HTML to selected the object.properties, it was giving me an error because it was trying to access the anime.title before assigning value to it.

--- a/src/app/home/anime-item/anime-item.component.html
+++ b/src/app/home/anime-item/anime-item.component.html
@@ -2,4 +2,5 @@
     <p>{{anime.title}}</p>
     <img src={{anime.image_url}}>
     <p>Score: {{anime.score}}</p>
+    <button type="button" class="btn btn-success" (click)="animeSelected()">View details</button>
 </div>
