--- a/src/app/home/anime-item/anime-detail/anime-detail.component.html
+++ b/src/app/home/anime-item/anime-detail/anime-detail.component.html
@@ -1,1 +1,8 @@
-<p>anime-detail works!</p>
+<div class="container">
+    <h1>{{animeTitle}}</h1>
+    <img src={{animeImageURL}}>
+    <p>Score: {{score}}</p>
+    <p>Episodes: {{episodes}}</p>
+    <p>Rated: {{rated}}</p>
+    <p>Members: {{members}}</p>
+</div>
