--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,6 +3,6 @@
     <img src={{anime.image_url}}>
     <p>Score: {{anime.score}}</p>
 </div> -->
-<h1>{{title}}</h1>
+<app-anime-detail></app-anime-detail>
 <app-anime-item *ngFor="let anime of animeList" [anime]="anime"></app-anime-item>
 
