--- a/src/app/home/anime-item/anime-item.component.html
+++ b/src/app/home/anime-item/anime-item.component.html
@@ -1,6 +1,11 @@
-<div class="col-xs-12">
-    <p>{{anime.title}}</p>
-    <img src={{anime.image_url}}>
-    <p>Score: {{anime.score}}</p>
-    <button type="button" class="btn btn-success" (click)="animeSelected()">View details</button>
+<div style="cursor: pointer;" class="col-sm-12" (click)="animeSelected()">
+    <div class="thumbnail">
+        <img src={{anime.image_url}} alt="...">
+        <div class="caption">
+          <h3>{{anime.title}}</h3>
+          <p><span class="glyphicon glyphicon-star" aria-hidden="true"></span> {{anime.score}}</p>
+        </div>
+      </div>
 </div>
+
+
