creating the routerLink to the detail when selected and routing to there + removing the static component from the app-component and switching it with the

--- a/src/app/home/anime-item/anime-item.component.html
+++ b/src/app/home/anime-item/anime-item.component.html
@@ -1,4 +1,4 @@
-<div style="cursor: pointer;" class="col-sm-12" (click)="animeSelected()">
+<div style="cursor: pointer;" class="col-sm-12" (click)="animeSelected()" routerLink="/detail">
     <div class="thumbnail">
         <img src={{anime.image_url}} alt="...">
         <div class="caption">
