reversinjg the router

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
 <div class="container">
-    <router-outlet></router-outlet>
+    <app-anime-detail></app-anime-detail>
+    <app-home></app-home>
 </div>
