making the detail stick

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 <app-header></app-header>
 <div class="container">
-    <app-anime-detail></app-anime-detail>
-    <app-home></app-home>
+    <div class="col-sm-6">
+        <app-home></app-home>
+    </div>
+    <div class="col-sm-6">
+        <app-anime-detail></app-anime-detail>
+    </div>
 </div>
