--- a/src/app/home/anime-item/anime-detail/anime-detail.component.html
+++ b/src/app/home/anime-item/anime-detail/anime-detail.component.html
@@ -1,4 +1,4 @@
-<div class="container" *ngIf="dataReceived">
+<div class="container" *ngIf="dataReceived" style="position: fixed;">
     <h1>{{anime.title}}</h1>
     <img src={{anime.image_url}}>
     <p>Score: {{anime.score}}</p>
