it is what it is

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,4 @@
 <app-header></app-header>
 <div class="container">
-    <div class="col-sm-6">
-        <app-home></app-home>
-    </div>
-    <div class="col-sm-6">
-        <app-anime-detail></app-anime-detail>
-    </div>
+    <router-outlet></router-outlet>
 </div>
