--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,10 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
           <input type="text" class="form-control" #queryParam placeholder="Search for an anime">
+          <button type="button" class="btn btn-light" (click)="updateQuery(queryParam.value)">Search</button>
         </div>
-        <button type="button" class="btn btn-primary" (click)="updateQuery(queryParam.value)">Search</button>
       </form>
   </div>
 </nav>
