--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,9 @@
     <p>Score: {{anime.score}}</p>
 </div> -->
 <div class="col-sm-6">
-    <app-anime-item *ngFor="let anime of animeList" [anime]="anime"></app-anime-item>
+    <ul class="list-group">
+        <app-anime-item *ngFor="let anime of animeList" [anime]="anime"></app-anime-item>
+    </ul>
 </div>
 <div class="col-sm-6">
     <app-anime-detail></app-anime-detail>
