"removing" the anime-detail component wich is going to be replaced with the anime-displayt component
the difference between the detail and the display components is the way they handle the clicked anime, the detail was rendering it in the home page, while the display component routes to a completely new component

--- a/src/app/home/anime-item/anime-detail/anime-detail.component.html
+++ b/src/app/home/anime-item/anime-detail/anime-detail.component.html
@@ -6,3 +6,5 @@
     <p>Rated: {{anime.rated}}</p>
     <p>Members: {{anime.members}}</p>
 </div>
+
+<!-- THIS COMPONENT ISN`T BEING USED ANYWHERE IT WAS PREVIOUSLY USED TO DSPLAY THE SELECTED ANIME IN THE MAN PAGE -->
