using encodeURIComponent to pass URL as parameter without braking the router
stackoverflow is the thing xD..

--- a/src/app/home/anime-item/anime-display/anime-display.component.html
+++ b/src/app/home/anime-item/anime-display/anime-display.component.html
@@ -1,7 +1,2 @@
-<h1>{{anime.title}}</h1>
-<img src={{anime.imgURL}}>
-<h1>{{anime.score}}</h1>
-<a href={{anime.url}}>AnimeList</a>
-<p>episodes: {{anime.episodes}}</p>
-<p>start date: {{anime.start}}</p>
-<p>end date: {{anime.end}}</p>
+<h1>{{anime.url}}</h1>
+<p>episodes: {{anime}}</p>
