decoding uri component so it cal be a link

--- a/src/app/home/anime-item/anime-display/anime-display.component.html
+++ b/src/app/home/anime-item/anime-display/anime-display.component.html
@@ -1,2 +1,3 @@
-<h1> URL{{animeURL}}</h1>
-<p>episodes: {{animeURL}}</p>
+<img src={{imageURL}}>
+<br/>
+<a target="_blank" href={{animeURL}}>Anime List Link</a>
