passing more data

--- a/src/app/home/anime-item/anime-display/anime-display.component.html
+++ b/src/app/home/anime-item/anime-display/anime-display.component.html
@@ -1,3 +1,5 @@
+<h1>{{title}}</h1>
 <img src={{imageURL}}>
 <br/>
 <a target="_blank" href={{animeURL}}>Anime List Link</a>
+<p>Synopsis: {{synopsis}}</p>
