adding more data

--- a/src/app/home/anime-item/anime-display/anime-display.component.html
+++ b/src/app/home/anime-item/anime-display/anime-display.component.html
@@ -3,3 +3,5 @@
 <br/>
 <a target="_blank" href={{animeURL}}>Anime List Link</a>
 <p>Synopsis: {{synopsis}}</p>
+<h2>Episodes: {{episodes}}</h2>
+<h1>Score: {{score}}</h1>
